# netwatch

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
plans/: disable-services.md  github-setup.md  release-0.1.0-alpha.1.md
scripts/: release.ps1
src/: actions.rs  app.rs  click_through.rs  defaults.rs  elevate.rs  etw.rs  features.rs  hotkeys.rs  icon.rs  main.rs  services.rs  settings.rs  single_instance.rs  state.rs  tasks.rs  tray.rs  tray_render.rs  win32.rs
src/ui/: action_menu.rs  chart.rs  hotkey_modal.rs  mod.rs  options_menu.rs  resize_grip.rs  table.rs  titlebar.rs
