[package]
name = "netwatch"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["abozart"]
description = "Tiny always-on-top Windows network activity watcher with per-process bandwidth, firewall/service actions, and a floating transparent chart."
license = "MIT"
readme = "README.md"
repository = "https://github.com/abozart/netwatch"
keywords = ["windows", "network", "monitor", "etw", "tui"]
categories = ["command-line-utilities", "visualization"]
publish = false

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
egui_plot = "0.29"
egui_extras = "0.29"
sysinfo = "0.32"
anyhow = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tray-icon = "0.19"
global-hotkey = "0.6"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
ferrisetw = "1.2"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_System_Diagnostics_Etw", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_Registry"] }

[target.'cfg(windows)'.build-dependencies]
embed-manifest = "1.4"
embed-resource = "3"
ico = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
